Fix bug on Text clipping.

--- a/assets/styles/components/landing.scss
+++ b/assets/styles/components/landing.scss
@@ -28,7 +28,7 @@
   @include m-0();
   @include p-0();
   @include px-2();
-  @include d-inline-flex();
+  @include d-inline-block();
   @include text-lowercase();
 
   font-family: 'Quicksand Bold';
